Fix bug with albums overlapping bottom navbar
Add bottom margin to main content for navbar
Made album display a bootstrap card

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 main {
    padding: 1rem;
+   margin-bottom: 5rem;
 }
 
 @media (min-width: 768px) {
